--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 h1 {
     color: #426696;
     font-weight: 600;
-    font-size: 3rem;
+    font-size: 4rem;
     opacity: 0.8;
 }
 
@@ -27,7 +27,8 @@ h3 {
 main {
     font-family: "Poppins", sans-serif;
     min-height: 100vh;
-    background: linear-gradient(to right top, #65dfc9, #6cdbeb);
+    background: linear-gradient(to right top, #65dfc9, #6cdbeb)
+        repeat fixed 100%;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -50,13 +51,10 @@ main {
 
 .circle1, .circle2 {
     background: white;
-    background: linear-gradient(
-        to right bottom,
-        rgba(255, 255, 255, 0.8),
-        rgba(255, 255, 255, 0.3)
-    );
-    height: 20rem;
-    width: 20rem;
+    background: linear-gradient(to right bottom, rgba(255, 255, 255, 0.8), rgba(255, 255, 255, 0.3))
+        repeat fixed 100%;
+    height: 40vh;
+    width: 40vh;
     position: absolute;
     border-radius: 50%;
 }
@@ -72,54 +70,9 @@ main {
 }
 
 .dashboard {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-evenly;
-    text-align: center;
-    background: linear-gradient(
-        to right bottom,
-        rgba(255, 255, 255, 0.7),
-        rgba(255, 255, 255, 0.3)
-    );
-    border-radius: 2rem;
-}
-
-.link {
-    display: flex;
-    margin: 2rem 0rem;
-    padding: 1rem 5rem;
-    align-items: center;
-}
-
-.link h2 {
-    padding: 0rem 2rem;
+    flex: 1;
 }
 
 .games {
-    display: flex;
     flex: 2;
-}
-
-.pro {
-    flex: -1;
-    background: linear-gradient(
-        to right bottom,
-        #65dfc9,
-        #6cdbeb
-    );
-    border-radius: 2rem;
-    color: white;
-    padding: 1rem;
-    position: relative;
-}
-
-.pro img {
-    position: absolute;
-    top: -10%;
-    right: 10%;
-}
-
-.pro h2 {
-    width: 40%;
 }
