--- a/css/404/style.css
+++ b/css/404/style.css
@@ -1,4 +1,39 @@
 html {
   background-color: blueviolet;
 }
+
+h1 {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  font-family: 'Roboto', sans-serif;
+  line-break: auto;
+}
+
+.button {
+  background-color: blue;
+  border-radius: 4px;
+  border: black;
+  outline: black;
+  cursor: pointer;
+  padding: 0.8rem 1.7rem;
+  font-size: 1.2rem;
+  font-weight: 700;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  font-family: 'Roboto', sans-serif;
+}
 /*# sourceMappingURL=style.css.map */
