--- a/css/404/style.scss
+++ b/css/404/style.scss
@@ -1,3 +1,26 @@
 html {
     background-color: blueviolet;
 }
+
+h1 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-family: 'Roboto', sans-serif;
+    line-break: auto;
+}
+
+.button{
+    background-color: blue;
+    border-radius: 4px;
+    border: black;
+    outline: black;
+    cursor: pointer;
+    padding: 0.8rem 1.7rem;
+    font-size: 1.2rem;
+    font-weight: 700;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-family: 'Roboto', sans-serif;
+}
