--- a/css/everything_else/style.scss
+++ b/css/everything_else/style.scss
@@ -78,6 +78,7 @@ body {
 
             #group-2 > .mid_layer {
                 z-index: 0;
+                background-color: forestgreen;
             }
 
             /*#outro {}*/
