--- a/sites/Games/NoughtsAndCrosses/style.css
+++ b/sites/Games/NoughtsAndCrosses/style.css
@@ -1,9 +1,13 @@
+.html {
+    font-family: 'Roboto', sans-serif;
+}
 .row div{
     padding: 10px;
     border: 1px solid black;
     height: 30px;
     width: 30px;
     float: left;
+    font-family: inherit;
 }
 .row {
     clear: both;
